--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@microsoft/sp-application-base": "1.7.1",
     "@microsoft/sp-core-library": "1.7.1",
     "@microsoft/sp-dialog": "1.7.1",
+    "@microsoft/sp-office-ui-fabric-core": "^1.7.1",
     "@types/es6-promise": "0.0.33",
     "@types/webpack-env": "1.13.1"
   },
